add the img pop script

--- a/home-nas-project.html
+++ b/home-nas-project.html
@@ -15,6 +15,15 @@
     referrerpolicy="no-referrer"
   />
 
+  <!-- Lightbox2 JavaScript -->
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
+    integrity="sha512-pYJtV5f901C2GzqI2vC2K6MCXbkDe4OhVk4l3D1SWIcJ+Yx3gWkVJ8zqildlTQlRlQmHkJjz4Kp6ACEqG/ZfWg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer">
+    </script>
+
+
   <style>
     :root {
       --bg: #ffffff;
